fix: Remove the test data, improve the contrast of the modal window

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -18,7 +18,6 @@
                 id="name"
                 name="name"
                 class="form__input"
-                value="Alex"
                 required
               />
               <div class="form__error error"></div>
@@ -30,7 +29,6 @@
                 id="email"
                 name="email"
                 class="form__input"
-                value="zhu@df.cs"
                 required
               />
               <div class="form__error error"></div>
@@ -42,8 +40,6 @@
                 id="phone"
                 name="phone"
                 class="form__input"
-                value="295116444"
-
                 required
               />
               <div class="form__error error"></div>
@@ -56,7 +52,7 @@
                 class="form__textarea"
                 cols="2"
                 required
-              >121</textarea>
+              ></textarea>
               <div class="form__error error"></div>
             </div>
           </div>
